# ansible-role-certificates

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml  requirements.yml
defaults/: main.yml
meta/: main.yml  requirements.yml
molecule/all/: molecule.yml
molecule/default/: molecule.yml
molecule/resources/playbooks/: converge.yml  prepare.yml  verify.yml
tasks/: ca.yml  certs.yml  main.yml
vars/: alpine.yml  archlinux.yml  debian.yml  main.yml  redhat.yml
