[project]
name = "certificates"
version = "0.0.0"
description = "Ansible role for deploying CA/TLS Certificates and updating the CA Trust Store."
authors = ["Jonas Mauer"]
license = "MIT"
keywords = ["ca", "certificates", "https", "pki", "security", "ssl", "tls", "x509"]
repository = "https://github.com/jomrr/ansible-role-certificates"

[tool.commitizen]
name = "cz_conventional_commits"

[tool.semantic_release]
commit_message = "build(release): version {version}"
major_on_zero = false
upload_to_pypi = false
upload_to_vcs_release = true
version_toml = [
    "pyproject.toml:project.version",
]
